# tradexdegen

./: .gitignore  Anchor.toml  README.md  index.html  package-lock.json  package.json  sol-account.json  tailwind.config.js  tsconfig.json  usdt-account.json  vite.config.ts
programs/hackaton/: Cargo.toml
programs/hackaton/src/: lib.rs
src/: App.css  App.jsx  App.tsx  index.css  main.tsx  vite-env.d.ts
src/Pages/: dashboard.tsx  landing.tsx  newPairs.tsx  swap.tsx
src/Pages/balance/: index.tsx
src/Pages/comingSoon/: coming.tsx
src/Pages/dashboard/: newPairs.tsx
src/Pages/docs/: docs.tsx
src/Pages/home/: index.tsx
src/Pages/landing/: Landing.tsx
src/Pages/pnl/: page.tsx
src/Pages/setting/: settings.tsx
src/Pages/swap/: Swap.tsx  index.tsx
src/Pages/trading/: TradingPage.tsx
src/Pages/waitlist/: waitlist.tsx
src/components/: faq.jsx  faq.tsx  footer.jsx  footer.tsx  header.jsx  header.tsx  navbar.jsx  navbar.tsx  signInWithSol.tsx  tradeGrid.jsx  tradeGrid.tsx  video.jsx  video.tsx  waitlist.tsx
src/components/PnlCard/: index.tsx
src/components/dashboard/: demoFunds.tsx  home.tsx  layout.tsx  listTable.tsx  navbar.tsx  reownwallet.tsx  sidebar.tsx  tokenView.tsx  walletBar.tsx
src/components/swapping/: swap.tsx  swapbar.tsx
src/components/swaps/: swapInterface.tsx  tokenSelector.tsx  tokenSelectorModal.tsx
src/components/ui/: sheet.tsx  (+3 more)
src/lib/: supabase.ts
src/provider/: WalletProvider .tsx
src/routes/: Routes.tsx
src/types/: wallet-adapter-wallets.d.ts
src/utils/: priceData.ts
styles/: globals.css
tests/: hackaton.ts
(+6 files in other folders)
